# jobs_rest_sam

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  samconfig.template.toml  template.yaml
.github/: FUNDING.yml
app/: config.py  main.py  utils.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/info/: __init__.py
app/api/v1/info/endpoints/: __init__.py
app/api/v1/info/endpoints/project_info/: __init__.py  endpoint.py
app/api/v1/jobs/: __init__.py
app/api/v1/jobs/endpoints/: __init__.py
app/api/v1/jobs/endpoints/create/: __init__.py  endpoint.py
app/api/v1/jobs/endpoints/delete/: __init__.py  endpoint.py
app/api/v1/jobs/endpoints/get/: __init__.py  endpoint.py
app/api/v1/jobs/endpoints/list/: __init__.py  endpoint.py
app/api/v1/jobs/endpoints/update/: __init__.py  endpoint.py  schema.py
app/modules/jobs/: dependencies.py  repository.py  schema.py
layers/fastapi/: Makefile  requirements.txt
tests/: conftest.py  test_utils.py
tests/api/v1/info/: test_project_info.py
tests/api/v1/jobs/endpoints/: test_create.py  test_delete.py  test_get.py  test_list.py  test_upsert.py
tests/modules/jobs/: test_repository.py
